...
    workoutNotesPlaceholder: 'Add notes',
    exerciseNotesPlaceholder: 'Add Notes',
    addExerciseLabel: 'Add Exercise',
    deleteLabel: 'Delete Workout',
    addSetLabel: 'Add Set',
    addExerciseSheet: {
      title: 'Exercises',
      searchPlaceholder: 'Search or Create Exercises',
      addButtonLabel: 'Add',
      exercises: [],
    },
    exercises: [],
  }
...
